--- a/index.html
+++ b/index.html
@@ -17,6 +17,29 @@
   	<script type="text/javascript" src="js/scripts.js"></script>
   </head>
   <body>
-
+    <h1>Enter the length, height, width and weight of the parcel you wish to send...</h1>
+    <form action="parcel.php">
+      <div class="form-group">
+        <label for="length">Length:
+          <input type="number" id="length" name="length" class="form-control">
+        </label>
+      </div>
+      <div class="form-group">
+        <label for="height">Height:
+          <input type="number" id="height" name="height" class="form-control">
+        </label>
+      </div>
+      <div class="form-group">
+        <label for="width">Width:
+          <input type="number" id="width" name="width" class="form-control">
+        </label>
+      </div>
+      <div class="form-group">
+        <label for="weight">Weight:
+          <input type="number" id="weight" name="weight" class="form-control">
+        </label>
+      </div>
+      <button type="submit">Submit</button>
+    </form>
   </body>
 </html>
